WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
45890
[v8] Web Inspector: [REGRESSION] Scripts disappear from scripts panel after navigation
https://bugs.webkit.org/show_bug.cgi?id=45890
Summary
[v8] Web Inspector: [REGRESSION] Scripts disappear from scripts panel after n...
Yury Semikhatsky
Reported
2010-09-16 07:31:02 PDT
Web Inspector: [REGRESSION] Scripts disappear from scripts panel after navigation What steps will reproduce the problem? 1. Open DevTools 2. Navigate 3. Check scripts drop down on scripts panel
Attachments
Patch
(4.80 KB, patch)
2010-09-16 07:39 PDT
,
Yury Semikhatsky
no flags
Details
Formatted Diff
Diff
Patch
(6.79 KB, patch)
2010-09-16 08:19 PDT
,
Yury Semikhatsky
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Yury Semikhatsky
Comment 1
2010-09-16 07:39:44 PDT
Created
attachment 67796
[details]
Patch
Pavel Feldman
Comment 2
2010-09-16 07:44:45 PDT
Comment on
attachment 67796
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=67796&action=prettypatch
> WebKit/chromium/src/WebDevToolsAgentImpl.cpp:267 > frontendLoaded();
I'd rather create InspectorController::reconnectFrontend that would internally call connectFrontend(), restoreDebugger() and restoreProfiler(). Latter ones can be private then.
Yury Semikhatsky
Comment 3
2010-09-16 08:19:02 PDT
Created
attachment 67799
[details]
Patch
Yury Semikhatsky
Comment 4
2010-09-16 08:19:37 PDT
(In reply to
comment #2
)
> (From update of
attachment 67796
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=67796&action=prettypatch
> > > WebKit/chromium/src/WebDevToolsAgentImpl.cpp:267 > > frontendLoaded(); > > I'd rather create InspectorController::reconnectFrontend that would internally call connectFrontend(), restoreDebugger() and restoreProfiler(). Latter ones can be private then.
Done.
Yury Semikhatsky
Comment 5
2010-09-16 08:38:38 PDT
Comment on
attachment 67799
[details]
Patch Clearing flags on attachment: 67799 Committed
r67623
: <
http://trac.webkit.org/changeset/67623
>
Yury Semikhatsky
Comment 6
2010-09-16 08:38:49 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug