2010-09-16  Yury Semikhatsky  <yurys@chromium.org>

Reviewed by Pavel Feldman.

        Web Inspector: [REGRESSION] Scripts disappear from scripts panel after navigation
        https://bugs.webkit.org/show_bug.cgi?id=45890

        * inspector/InspectorController.cpp:
        (WebCore::InspectorController::populateScriptObjects):
        (WebCore::InspectorController::restoreDebugger):
        (WebCore::InspectorController::restoreProfiler):
        * inspector/InspectorController.h:
2010-09-16  Yury Semikhatsky  <yurys@chromium.org>

        Reviewed by Pavel Feldman.

        Web Inspector: [REGRESSION] Scripts disappear from scripts panel after navigation
        https://bugs.webkit.org/show_bug.cgi?id=45890

        * src/WebDevToolsAgentImpl.cpp:
        (WebKit::WebDevToolsAgentImpl::setRuntimeProperty): make sure debugger and profiler
        are initialized when inspected page navigation leads to renderer process change.

git-svn-id: svn://svn.chromium.org/blink/trunk@67623 bbb929c8-8fbe-4397-9dbb-9b2b20218538