third_party/WebKit/WebCore/inspector/InspectorController.h
@@ -142,6 +142,7 @@ public:
     // transport via InspectorClient. After migration, webInspector parameter should
     // be removed.
     void connectFrontend();
+    void reuseFrontend();
     void disconnectFrontend();
 
     void addMessageToConsole(MessageSource, MessageType, MessageLevel, ScriptCallStack*, const String& message);
@@ -278,6 +279,8 @@ private:
     friend class InjectedScriptHost;
 
     void populateScriptObjects();
+    void restoreDebugger();
+    void restoreProfiler();
     void unbindAllResources();
 
     // Following are used from InspectorBackend and internally.
