third_party/WebKit/WebKit/chromium/src/WebDevToolsAgentImpl.h
@@ -104,6 +104,7 @@ public:
 
 private:
     void setApuAgentEnabled(bool enabled);
+    void connectFrontend(bool afterNavigation);
 
     WebCore::InspectorController* inspectorController();
 
